--- a/a4-utility-models.Rmd
+++ b/a4-utility-models.Rmd
@@ -33,6 +33,8 @@ Click [here](content/slides_choice_modeling.pdf) to download the slides in the v
 <iframe width="640" height="360" src="https://www.youtube.com/embed/CjFLZf-hHwA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 </center>
 
+If you are interested in more details about the logit model, see [Chapter 3 (free pdf)](https://eml.berkeley.edu/books/choice2nd/Ch03_p34-75.pdf) of Kenneth Train's book, ["Discrete Choice Methods with Simulation"](https://eml.berkeley.edu/books/choice2.html)
+
 # 3. Reflect, Knit, & Submit
 
 Reflect on what you've learned and any questions or points of confusion you have about the basics of utility models. Is there anything that jumped out at you? Anything you found particularly interesting or confusing? After reflecting, do the following:
