--- a/p3-pilot-survey.Rmd
+++ b/p3-pilot-survey.Rmd
@@ -10,20 +10,10 @@ params:
   number: 3
   weight: '4%'
   purpose: 'purpose'
-  assessment: 'Your pilot survey will be assessed using [this rubric](project/pilot/rubric.html){target="_blank"}.'
+  assessment: 'Your pilot survey will be assessed using [this rubric](project/pilot_survey/rubric.html){target="_blank"}.'
 ---
 
 ```{r child = "_knitr_setup.Rmd"}
-```
-
-```{r echo=FALSE}
-library(tidyverse)
-
-due <- get_schedule() %>%
-  mutate(project_due = format(project_due, format = "%b %d")) %>%
-  filter(project_n == params$number) %>%
-  pull(project_due)
-due <- paste0(due, " by 11:59pm")
 ```
 
 ```{r child = "_pheader.Rmd"}
@@ -33,9 +23,9 @@ As a team, create a **pilot survey** - an initial draft of your final survey for
 
 ## 1. Get Organized
 
-Download and unzip [this template](templates/project_pilot.zip) for your pilot survey. The folder contains the following files:
+Download and unzip [this template](templates/project_pilot_survey.zip) for your pilot survey. The folder contains the following files:
 
-- `pilot.Rproj`: An R Project file for staying organized.
+- `pilot_survey.Rproj`: An R Project file for staying organized.
 - `p1-intro.Rmd`: The code for creating part 1 of your survey, which should include a welcome page, content form, and eligibility questions for screening our ineligible respondents.
 - `p2-choice-questions.Rmd`: The code for creating part 2 of your survey, which should include your education content and randomized conjoint choice questions.
 - `p3-demos.Rmd`: The code for creating part 3 of your survey, which should include any other questions (e.g. demographics) you wish to ask your survey respondents.
