--- a/class/10-doe/practice.Rmd
+++ b/class/10-doe/practice.Rmd
@@ -1,8 +1,9 @@
 ---
 title: "Practice Questions"
-date: October 20, 2021
+date: November 03, 2021
 output:
   html_document:
+    theme: united
     toc: true
     toc_float: true
     number_sections: false
@@ -19,93 +20,40 @@ knitr::opts_chunk$set(
 )
 
 library(tidyverse)
-library(knitr)
-library(patchwork)
-library(kableExtra)
-library(here)
 library(logitr)
 library(fastDummies)
 ```
 
-## Practice Questions 1
+# Practice Question 1
 
-**Observations** - Height of students (inches):
+Consider the following experiment design
 
-```{r, echo=FALSE}
-x <- c(65, 69, 66, 67, 68, 72, 68, 69, 63, 70)
-x
-```
+<div style="width:200px">
+a | b | c | Effect
+--|---|---|-------
++ | - | - | A
+- | + | - | B 
++ | - | + | AC 
+- | + | + | BC 
+</div>
 
-a) Let's say we know that the height of students, $\tilde{x}$, in a classroom follows a normal distribution. A professor obtains the above height measurements students in her classroom. What is the log-likelihood that $\tilde{x} \sim \mathcal{N} (68, 4)$? In other words, compute $\ln \mathcal{L} (\mu = 68, \sigma = 4)$.
+<center>
+<img src="images/practice_question_1.png" width=300>
+</center>
 
-```{r}
-# Write code here
-```
+a) Is the design balanced? Is is orthogonal?
 
-b) Compute the log-likelihood function using the same standard deviation $(\sigma = 4)$ but with the following different values for the mean, $\mu: 66, 67, 68, 69, 70$. How do the results compare? Which value for $\mu$ produces the highest log-likelihood?
+- Balanced:  YES/NO? 
+- Othogonal: YES/NO? 
 
-```{r, fig.height=4, fig.width=6}
-# Write code here
-```
-
-
-
-## Practice Questions 2
-
-Consider the following function:
-
-$$f(x) = x^2 - 6x$$
-
-The gradient is:
-
-$$\Delta f(x) = 2x - 6$$
-
-Using the starting point $x = 1$ and the step size $\gamma =  0.3$, apply the gradient descent method to compute the next **three** points in the search algorithm.
-
-```{r, fig.height=4, fig.width=6}
-# Write code here
-```
-
-
-
-
-## Practice Questions 3
-
-Consider the following function:
-
-$$
-f(\underline{x}) = x_1^2 + 4x_2^2
-$$
-
-The gradient is:
-
-$$
-\Delta f(\underline{x}) =
-\begin{bmatrix}
-2x_1
-\\
-8x_2
-\end{bmatrix}
-$$
-
-Using the starting point $\underline{x}_0 = [1, 1]$ and the step size $\gamma =  0.15$, apply the gradient descent method to compute the next **three** points in the search algorithm.
-
-```{r, fig.height=4, fig.width=6}
-# Write code here
-```
-
-
-
-## In Class Questions 1
-
-1. Write code to read in the `state_abbs.csv` and `state_regions.csv` data files in the "data" folder.
+Check: 
 
 ```{r}
 # Write code here
 ```
 
-2. Create a new data frame called `states` by joining the two data frames `states_abbs` and `state_regions` together. The result should be a data frame with variables `region`, `name`, `abb`.
+The design is NOT orthogonal because A is always equal to -B.
 
-```{r}
-# Write code here
-```
+b) Write out the equation to compute the main effect for a, b, and c. 
+
+c) Are any main effects confounded? If so, what are they confounded with?
