--- a/p7-final-presentation.Rmd
+++ b/p7-final-presentation.Rmd
@@ -16,8 +16,23 @@ params:
 ```{r child = "_knitr_setup.Rmd"}
 ```
 
-```{r child = "_pheader.Rmd"}
+```{r echo=FALSE}
+library(tidyverse)
+
+due <- get_schedule() %>%
+  mutate(project_due = format(project_due, format = "%b %d")) %>%
+  filter(project_n == params$number) %>%
+  pull(project_due)
+due <- paste0(due, " by 5pm (before class)")
 ```
+
+> **Due**: `r due`
+>
+> **Weight**: This assignment is worth `r params$weight` of your final grade.
+>
+> **Purpose**: `r params$purpose`
+>
+> **Assessment**: `r params$assessment`
 
 
 Prepare a 10-minute presentation of your findings in your final report. **You may choose to either present your presentation live in class on December 15, 2021 or pre-record your video to watch in class**. Each team should prepare to answer questions from the audience during class. As always, you may call in to class on Zoom if you cannot be present in person, but I do expect everyone to be present (in person or virtually) for your presentation. Below is a list of specific items your presentation should include.
